@@ -35,7 +35,8 @@ slurs and beams are sloped, <em>automatically</em>!
 
 All style settings, font designs and algorithms have been inspired by
 the finest hand-engraved music. LilyPond output has that same strong
-and balanced look as a classical scores.
+and balanced look as a classical scores. (<a
+href="../about/essay/typographical-features.html">more</a>)
 
 
 <h2>Libre software</h2>
