@@ -1,5 +1,7 @@
 2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scripts/format-page.py: restrict eval with {}. 
+
 	* site/about/automated-engraving/typography-features.html: add
 	ledger lines example.
 
